--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Bowen Xiao
 tagline:          "That would be me."
 description:      'A blog, it would seem.'
-url:              http://revan.io
+url:              http://bowenXiaoCUHKSZ.io
 
 author:
   name:           'Bowen Xiao'
