--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Bowen Xiao
 tagline:          "That would be me."
 description:      'A blog, it would seem.'
-url:              'http://bowenXiaoCUHKSZ.io'
+url:              'http://bowenXiaoCUHKSZ.github.io'
 
 author:
   name:           'Bowen Xiao'
