--- a/_data/work.yml
+++ b/_data/work.yml
@@ -1,6 +1,6 @@
-- name: "Coursera"
-  date: "Summer 2015"
-  url: https://www.coursera.org/
+- name: "Shenzhen Big Data Institute"
+  date: "Summer 2019"
+  url: http://www.sribd.cn/index.php/cn/
   description: "
     A massive online open course ed-tech company.
       <br>My first job to not involve any mobile development, I was on the infrastructure team.
@@ -8,20 +8,32 @@
       <br> I contributed to an internal load balancer and AWS deployment tools, and designed and built a real-time abuse protection service.
       <br>Did this as part of the <a href='http://kpcbfellows.com'>KPCB Fellows Program</a>.
     " 
-  image: coursera.png
-- name: "Noom, Inc."
-  date: "Summer 2014"
-  url: http://www.noom.com/
+  image: Big_Data.png
+
+- name: "Software for Edge and Blockchain Systems (SFENKS) Laboratory, CUHK-Shenzhen"
+date: "2018-2020"
+url: http://sfenks.sse.cuhk.edu.cn/
+description: "
+The <a href='dynawheel.jpg'>Dynawheel</a> is a medical smartphone accessory, providing a system for engaging physical therapy,
+because squeezing a therapy ball gets boring <i>fast</i>.
+<br>I worked closely with the creators to develop a remote reporting system that makes local patient metrics
+available to therapists via a web interface.
+"
+image: sfenks.png
+
+- name: "Research Institute of Tsinghua University in Shenzhen."
+  date: "September 2019"
+  url: https://www.tsinghua-sz.org/
   description: "
   Noom is a cool little company that makes a weight loss coach app for iOS and Android.
   <br>I worked on a team to develop a social network for group therapy, contributing code to both platforms, as well as
   working on internal tools for our in-house psychologist to monitor users and automated tests to monitor the database.
   "
-  image: noom.png
+  image: tsinghua.png
 
-- name: "New Jersey Governor's School of Engineering & Technology"
-  date: "Summer 2013"
-  url: http://soe.rutgers.edu/new-jersey-governors-school-engineering-technology
+- name: "Tech X Summer Academic Camp"
+  date: "Summer 2019"
+  url: https://www.techx.academy/
   description: "
   In the Governor's School program, a bunch of talented high school juniors are housed on campus for an intense month of
   courses, company tours, and independent research.
@@ -30,15 +42,4 @@
   <br>I myself had gone through the Governor's School program a few years prior, where I first learned about Android
   development, so mentoring was a pretty cool experience.
   "
-  image: gset.jpg
-
-- name: "Nian-Crae, Inc: Dynawheel Stroke Therapy"
-  date: "2013-2014"
-  url: http://www.niancrae.com/about.html
-  description: "
-  The <a href='dynawheel.jpg'>Dynawheel</a> is a medical smartphone accessory, providing a system for engaging physical therapy,
-  because squeezing a therapy ball gets boring <i>fast</i>.
-  <br>I worked closely with the creators to develop a remote reporting system that makes local patient metrics
-  available to therapists via a web interface.
-  "
-  image: niancrae.png
+  image: TechX.png
