--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,121 +1,11 @@
-- name: "LinkedIn Unconcious Bias Experiment"
-  url: https://github.com/revan/LinkedIn-Unconscious-Bias
+- name: "Learning Analytics"
+  # url: https://github.com/revan/LinkedIn-Unconscious-Bias
   description: "
     An A/B testing framework for running experiments to assess the impact of unconscious bias in recruiting.
     Subjects are asked to rank a series of LinkedIn profile pairs, with and without name/picture stripped.
     Profiles that perform better with information stripped are likely suffering from negative bias.
     "
-  image: linkedin.png
+  image: Big_Data.png
+  # prize: "<a> Huawei Data Creative Competition </a>"
+  # demo : url for demo
 
-- name: "Rutgers Crime Alerts"
-  url: https://github.com/revan/RU-Crime-Alerts
-  description: "
-    Another scraping API, this one extracts information from the statements released by the Rutgers Police Department.
-  <a href='http://vps.rsopher.com/crime.html'>Live map demo.</a>
-    "
-  image: crime.png
-  demo: http://vps.rsopher.com/crime.json
-
-- name: "asOne"
-  url: https://github.com/joshjiav5/asOne
-  description: "
-    An iOS app to build a support network of close friends for the night to take steps to ensure everyone’s safety, fighting bystander inaction. Made for a hackathon for the theme of \"Safety for women on campus\". First time working on a fresh iOS codebase, which was... not as bad as I'd expected.
-    "
-  image: asOne.jpg
-
-- name: "Watchface: Selfie Time"
-  url: https://github.com/revan/watchface
-  description: "
-    A mobile website to turn a photo into an analog watchface for Pebble.
-    The server inserts the image into a C Pebble SDK project and compiles to get the binary.
-  "
-  prize: "Best Use of Linode, HackRU S2015"
-  image: watchface.png
-  demo: http://vps.rsopher.com/watchface
-
-- name: "IRCget"
-  url: https://github.com/revan/IRCget
-  description: "
-    A sorta crude interactive script that prompts you for an ebook title then tries to acquire it from the file-serving IRC bots on certain servers.
-    Real shady stuff.
-  "
-
-- name: "FWTM"
-  url: https://github.com/revan/FWTM
-  description: "
-    A weird little game where two teams of players, equipped with an Android phone in hand and a unique QR tag taped to their backs, compete for control of a selection of New York City blocks while hunting each other. Pulls data from the NYC Open Data 2010 Census.
-  "
-  image: fwtm.png
-
-- name: "Pebble Rutgers"
-  url: https://github.com/revan/Pebble-Rutgers
-  description: "
-    Pebble smartwatch app that displays university dining hall menus (using my scraper below)
-    and bus times.
-  "
-  image: pebble-rutgers.png
-
-- name: "Moustachio"
-  url: https://github.com/revan/Moustachio 
-  description: "
-    Chrome extension that adds a moustache to Wikipedia biographies. Similar to the gabenizer (below).
-    Not yet live, because I have yet to figure out how to host this cheaply.
-  "
-  prize: "<a href='https://twitter.com/theHackRU/status/521385920470466560'>Funniest Hack, HackRU F2014</a>"
-  image: moustachio.png
-
-- name: "DungeonSprawl"
-  url: https://github.com/revan/DungeonSprawl
-  description: "
-  A simple dungeon crawler game, played on any number of Android devices linked via websockets to a host computer. Each Android device takes a turn representing a room in the dungeon, sprawling outward.
-  Graphics are ASCII based because that's all I had time for.
-  "
-  image: dungeonsprawl.png
-
-- name: "Rutgers Nutrition API"
-  url: https://github.com/revan/RU-Food-Scraper
-  description: "
-  Scrapes basic nutrition information for Rutgers menus into JSON.
-  The original source of the data is a closed-source system that outputs in ugly ugly HTML tables.
-  "
-  demo: http://vps.rsopher.com/nutrition.json
-
-- name: "captcha4charity"
-  url: https://github.com/revan/captcha4charity
-  description: "
-  <i>Making the internet a worse place, making the world a better place.</i>
-  <br>
-  A service for crowd-sourcing CAPTCHA challenges and raising money for charity.
-  It's missing some pretty basic functionality, but the idea was novel enough.
-  "
-  prize: "Restored Faith in Humanity Award, HackRU S2014"
-  image: captcha4charity.png
-
-- name: "StandupMagic"
-  url: https://github.com/revan/StandupMagic
-  description: "
-  A chrome extension for generating a bulleted list for daily \"standup\" meetings.
-
-  Fetches tasks from Asana and outstanding code reviews from a Rietveld server.
-  "
-  image: standupmagic.png
-
-- name: "gabenizer"
-  url: https://github.com/revan/gabenizer
-  description: "
-  A reddit bot that runs pictures of models through facial detection,
-  and pastes Gabe Newell's face over theirs.
-  The bot has over 4000 subscribers, which I honestly find a bit odd.
-  "
-  prize: "/r/gaben's <a href='http://www.reddit.com/r/Gaben/wiki/index'>The Chivalric Order of the Knights of Newell</a>"
-  image: gabenizer.png
-  demo: http://www.reddit.com/r/gentlemangabers
-
-- name: "mailcraft"
-  url: https://github.com/dbordak/mailcraft
-  description: "
-  A Minecraft dungeon generator that uses a user's email conversations to create rooms and hallways.
-  Rooms are procedurally generated parkour challenges.
-  "
-  image: mailcraft.png
-  prize: "<a href='https://twitter.com/ContextIO/status/389566537830391808'>Best use of Context.io API</a>"
