change resume address

--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ author:
 paginate_path:    "blog/page:num"
 paginate:         5
 
-resume:           'https://drive.google.com/open?id=1AL_9VhJoZGKNv7N--_S2RSjUZ3NXT5aY'
+resume:           'https://bowenxiaocuhksz.github.io/BowenXiao_Resume.pdf'
