--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,5 @@ author:
 paginate_path:    "blog/page:num"
 paginate:         5
 
-resume:           'pdf/BowenXiao_Resume2.pdf'
+resume:           'BowenXiao_Resume2.pdf'
 # what the hell
